# hyprexpose

./: .gitignore  Cargo.toml  LICENSE  Makefile  PKGBUILD  README.md  build.rs  config.example.toml  default.nix  result  shell.nix
src/: capture.cpp  capture.h  config.rs  ipc.cpp  ipc.h  ipc.rs  main.cpp  main.rs  render.cpp  render.h  render.rs  stubs.c  surface.cpp  surface.h
