[package]
name = "hyprexpose"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hyprexpose"
path = "src/main.rs"

[dependencies]
wayland-client = "0.31"
wayland-backend = "0.3"
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
wayland-scanner = "0.31"
bitflags = "2"
cairo-rs = "0.22"
pango = "0.22"
pangocairo = "0.22"
libc = "0.2"
